minio/minio-operator/ingress-console-operator-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio-console-secure
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: console
      port:
        number: 9443
  tls:
  - hosts:
      - minio-console.cluster.local
    secretName: nginx-console-tls
  rules:
  - host: minio-console.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 9443
