minio/minio-operator/ingress-console-operator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio-console-operator
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  defaultBackend:
    service:
      name: console
      port:
        number: 9090
  tls:
  - hosts:
      - minio-operator.10.1.1.120.traefik.me
    secretName: nginx-operator-tls
  rules:
  - host: minio-operator.10.1.1.120.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 9090
