minio/minio-operator/ingress-storage-console-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio-console
  namespace: minio-storage
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: minio
      port:
        number: 80
  rules:
  - host: minio-storage-console-10-1-1-120.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-storage-console
            port:
              number: 9090
  - host: minio-storage-10-1-1-120.traefik.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 80
---
